Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>Macro Object Program</title>
+<!-- App icons for Home Screen -->
+<link rel="icon" type="image/jpeg" href="icon.jpeg">
+<link rel="apple-touch-icon" href="icon.jpeg">
+<meta name="apple-mobile-web-app-title" content="MOP">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Professional fonts -->
