--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ button.action:hover{
 
   
   const content = document.getElementById("content");
+  const CLOUDFLARE_WORKER_URL = "https://icy-shadow-538b.bellybutton7.workers.dev"; // UPDATE THIS
 
 function loadPage(page){
   if(page==="home"){
@@ -266,6 +267,7 @@ function loadPage(page){
       <ul>
         <li><button class="action" onclick="loadPage('qa')">Questions & Answers</button></li>
         <li><button class="action" onclick="downloadHTML()">Download index.html</button></li>
+        <li><button class="action" onclick="loadPage('origination')">Origination Contributors</button></li>
       </ul>
     `;
   }
@@ -281,6 +283,86 @@ It was created to serve as a centralized clearinghouse for observations of macro
       <p><strong>Q:</strong> What are Near-Earth Objects (NEOs) and Potentially Hazardous Asteroids (PHAs)?<br>
          <strong>A:</strong> NEOs are asteroids and comets that approach within 1.3 Astronomical Units (AU) of the Sun.
 PHAs are a subset of NEOs identified as being potentially hazardous due to their size and close approach to Earth's orbit.</p>
+    `;
+  }
+
+
+  if(page==="origination"){
+    content.innerHTML = `<h1>Origination Contributors</h1><p id="orig-status">Syncing global data...</p><div id="orig-content"></div>`;
+    fetch(`${CLOUDFLARE_WORKER_URL}/discoveries`).then(r=>r.json()).then(data=>{
+      document.getElementById("orig-status").style.display="none";
+      document.getElementById("orig-content").innerHTML = `
+        <div style="background:var(--accent-blue);color:white;padding:20px;border-radius:8px;margin-bottom:30px;">
+          <h2 style="margin-top:0;color:white;">Global Summary</h2>
+          <div style="font-size:48px;font-weight:bold;">${data.length}</div>
+        </div>
+        <table border="1" cellpadding="10" style="width:100%;border-collapse:collapse;">
+          <thead><tr style="background:#f5f5f5;"><th>Object ID</th><th>Device</th><th>Timestamp</th></tr></thead>
+          <tbody>${data.map(d=>`<tr><td>${d.name}</td><td>${d.deviceId}</td><td>${d.discoveredAt}</td></tr>`).join("")}</tbody>
+        </table>`;
+    }).catch(e=>document.getElementById("orig-status").innerText="Offline mode: showing local data only.");
+    return;
+    content.innerHTML = `<h1>Origination Contributors</h1><p id="orig-status">Syncing global data...</p><div id="orig-content"></div>`;
+    fetch(`${CLOUDFLARE_WORKER_URL}/discoveries`).then(r=>r.json()).then(data=>{
+      document.getElementById("orig-status").style.display="none";
+      document.getElementById("orig-content").innerHTML = `
+        <div style="background:var(--accent-blue);color:white;padding:20px;border-radius:8px;margin-bottom:30px;">
+          <h2 style="margin-top:0;color:white;">Global Summary</h2>
+          <div style="font-size:48px;font-weight:bold;">${data.length}</div>
+        </div>
+        <table border="1" cellpadding="10" style="width:100%;border-collapse:collapse;">
+          <thead><tr style="background:#f5f5f5;"><th>Object ID</th><th>Device</th><th>Timestamp</th></tr></thead>
+          <tbody>${data.map(d=>`<tr><td>${d.name}</td><td>${d.deviceId}</td><td>${d.discoveredAt}</td></tr>`).join("")}</tbody>
+        </table>`;
+    }).catch(e=>document.getElementById("orig-status").innerText="Offline mode: showing local data only.");
+    return;
+    content.innerHTML = `<h1>Origination Contributors</h1><p id="orig-status">Syncing global data...</p><div id="orig-content"></div>`;
+    fetch(`${CLOUDFLARE_WORKER_URL}/discoveries`).then(r=>r.json()).then(data=>{
+      document.getElementById("orig-status").style.display="none";
+      document.getElementById("orig-content").innerHTML = `
+        <div style="background:var(--accent-blue);color:white;padding:20px;border-radius:8px;margin-bottom:30px;">
+          <h2 style="margin-top:0;color:white;">Global Summary</h2>
+          <div style="font-size:48px;font-weight:bold;">${data.length}</div>
+        </div>
+        <table border="1" cellpadding="10" style="width:100%;border-collapse:collapse;">
+          <thead><tr style="background:#f5f5f5;"><th>Object ID</th><th>Device</th><th>Timestamp</th></tr></thead>
+          <tbody>${data.map(d=>`<tr><td>${d.name}</td><td>${d.deviceId}</td><td>${d.discoveredAt}</td></tr>`).join("")}</tbody>
+        </table>`;
+    }).catch(e=>document.getElementById("orig-status").innerText="Offline mode: showing local data only.");
+    return;
+    const discovered = JSON.parse(localStorage.getItem("mop_discovered") || "[]");
+    
+    // In a real app, this would be fetched from a shared database.
+    // For this standalone version, we simulate the "Shared" view.
+    content.innerHTML = `
+      <h1>Origination Contributors</h1>
+      <p>This screen displays the collective astronomical discoveries documented across all authorized devices for the current cycle.</p>
+      
+      <div style="background:var(--accent-blue); color:white; padding:20px; border-radius:8px; margin-bottom:30px;">
+        <h2 style="margin-top:0; color:white;">Today's Global Summary</h2>
+        <div style="font-size:48px; font-weight:bold;">${discovered.length}</div>
+        <div>Total Objects Documented Today</div>
+      </div>
+
+      <h2>Recent Collective Discoveries</h2>
+      <table border="1" cellpadding="10" style="width:100%; border-collapse:collapse; margin-top:20px;">
+        <thead>
+          <tr style="background:#f5f5f5;">
+            <th>Object ID</th>
+            <th>Contributor Device</th>
+            <th>Timestamp</th>
+          </tr>
+        </thead>
+        <tbody>
+          ${discovered.length > 0 ? discovered.map(o => `
+            <tr>
+              <td>${o.name}</td>
+              <td><i>Device-ID-${o.uid.slice(0,4)}</i></td>
+              <td>${o.discoveredAt}</td>
+            </tr>
+          `).join('') : '<tr><td colspan="3" style="text-align:center;">No global discoveries reported yet for this cycle.</td></tr>'}
+        </tbody>
+      </table>
     `;
   }
 
@@ -359,6 +441,11 @@ PHAs are a subset of NEOs identified as being potentially hazardous due to their
     const list = JSON.parse(localStorage.getItem("mop_discovered") || "[]");
     list.push(o);
     localStorage.setItem("mop_discovered", JSON.stringify(list));
+    fetch(`${CLOUDFLARE_WORKER_URL}/discoveries`, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ uid: o.uid, name: name, discoveredAt: o.discoveredAt, deviceId: "Device-" + Math.random().toString(36).substring(2,6) })
+    }).catch(e=>console.log("Sync failed"));
   }
 
   
