--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ function loadPage(page){
       <p><strong>Q:</strong> Who operates the MOP, and under what organization?<br>
          <strong>A:</strong> The Macro Object Program is operated by the BC Astrophysical Observatory (BCAO), which is directed by The BC. Specifically, James Degenhardt, B-07, and students part of the Computer Science for Astrophysics Program created this database.</p>
       <p><strong>Q:</strong> When was the Macro Object Program established?<br>
-         <strong>A:</strong> The Minor Planet Center (MPC) was established in 1947.
+         <strong>A:</strong> The Macro Object Program (MOP) was established in 2025.
 It was created to serve as a centralized clearinghouse for observations of macro objects, so that astronomers worldwide could coordinate discoveries, track orbits, and avoid duplicate reporting.</p>
       <p><strong>Q:</strong> What are Near-Earth Objects (NEOs) and Potentially Hazardous Asteroids (PHAs)?<br>
          <strong>A:</strong> NEOs are asteroids and comets that approach within 1.3 Astronomical Units (AU) of the Sun.
